// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base case 1`] = `
<Form
  id="subaccount-edit-form"
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={false}
        />
      </Box>
      <Box
        maxWidth="45rem"
      >
        <StatusSelect
          compliance={false}
          disabled={false}
        />
      </Box>
      <Stack>
        <RestrictToIpPoolCheckbox
          disabled={false}
        />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Update Subaccount
      </Button>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</Form>
`;

exports[`cancel button 1`] = `
<Form
  id="subaccount-edit-form"
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={false}
        />
      </Box>
      <Box
        maxWidth="45rem"
      >
        <StatusSelect
          compliance={false}
          disabled={false}
        />
      </Box>
      <Stack>
        <RestrictToIpPoolCheckbox
          disabled={false}
        />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={false}
        submit={true}
        variant="primary"
      >
        Update Subaccount
      </Button>
      <Button
        disabled={false}
        variant="secondary"
      >
        Cancel
      </Button>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</Form>
`;

exports[`no ip pools 1`] = `
<Form
  id="subaccount-edit-form"
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={false}
        />
      </Box>
      <Box
        maxWidth="45rem"
      >
        <StatusSelect
          compliance={false}
          disabled={false}
        />
      </Box>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Update Subaccount
      </Button>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</Form>
`;

exports[`should disable all fields when compliance is true 1`] = `
<Form
  id="subaccount-edit-form"
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={true}
        />
      </Box>
      <Box
        maxWidth="45rem"
      >
        <StatusSelect
          compliance={true}
          disabled={true}
        />
      </Box>
      <Stack>
        <RestrictToIpPoolCheckbox
          disabled={true}
        />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Update Subaccount
      </Button>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</Form>
`;

exports[`submits correctly 1`] = `
<Form
  id="subaccount-edit-form"
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": undefined,
    }
  }
>
  <Panel.LEGACY.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={true}
        />
      </Box>
      <Box
        maxWidth="45rem"
      >
        <StatusSelect
          compliance={false}
          disabled={true}
        />
      </Box>
      <Stack>
        <RestrictToIpPoolCheckbox
          disabled={true}
        />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Updating...
      </Button>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</Form>
`;

exports[`with an assigned ip pool 1`] = `
<Form
  id="subaccount-edit-form"
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <Box
        maxWidth="45rem"
      >
        <NameField
          disabled={false}
        />
      </Box>
      <Box
        maxWidth="45rem"
      >
        <StatusSelect
          compliance={false}
          disabled={false}
        />
      </Box>
      <Stack>
        <RestrictToIpPoolCheckbox
          disabled={false}
        />
        <IpPoolSelect
          disabled={false}
          options={
            Array [
              "an array of ip pools",
            ]
          }
        />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Update Subaccount
      </Button>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</Form>
`;
